# project-templates

./: .gitignore  readme.md
ansible/: ansible.cfg  kill-retries.sh
ansible/inventory/: local
base/: readme-sample.md
licenses/: Apache-2.0.txt  BSD-3-Clause.txt  Proprietary.txt  Unlicense.txt
node/: package.json  prettierrc.json
packer/: packer-sample.json
python/: pyproject.toml
vagrant/: Vagrantfile  ansible.cfg
