[tool.poetry]
name = "project-name"
version = "0.1.0"
description = "Project description."
license = "MIT"
authors = ["Brennan Fee <brennan@github.mailbots.org>"]
readme = "readme.md"
homepage = "https://github.com/brennanfee/project-name#readme"
repository = "https://github.com/brennanfee/project-name"
documentation = "https://github.com/brennanfee/project-name#readme"
keywords = []

packages = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/brennanfee/project-name/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
poetry = 'poetry.console:run'
